--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,3 +15,36 @@ h1{
 img {
    border-radius: 5%;
  }
+
+ .galleryContainer{
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: center;
+   align-items: center;
+ }
+
+ .imgCont{
+    width: 250px;
+    height: 250px;
+    margin: 15px 10px;
+    box-sizing: border-box;
+ }
+
+ .imgCont:hover{
+   width: 250px;
+   height: 250px;
+ }
+
+ .imgCont:hover .responsive-img{
+    border: 4px dashed #0c84ec;
+    width: 100%;
+    height:250px;
+    margin: 10px 5px;
+    
+ }
+
+ .responsive-img{
+    width: 100%;
+    height:250px;
+    margin: 10px 5px;
+ }
